--- a/pinyougou-parent/pingyougou-manager-web/src/main/webapp/admin/brand.html
+++ b/pinyougou-parent/pingyougou-manager-web/src/main/webapp/admin/brand.html
@@ -17,26 +17,116 @@
 
 <script type="text/javascript" src="../plugins/angularjs/angular.min.js"></script>
 
+<!-- 分页组件开始 -->
+<script src="../plugins/angularjs/pagination.js"></script>
+<link rel="stylesheet" href="../plugins/angularjs/pagination.css">
+<!-- 分页组件结束 -->
+
 <script type="text/javascript">
-   	   //定义模块
-   	   var app= angular.module('pinyougou',[]);
-   	
-   	   //定义controller
-   	   app.controller("brandController",function($scope,$http){
-   		   //读取列表
-   		   $scope.findAll=function(){
-   			   $http.get("../rest/brand/findAll").success(
-   				  function(response){
-   					  $scope.list = response;
-   				  }	   
-   			   )
-   		   }
-   	   });
-   	   
-   	 </script>
+	//定义模块
+	var app = angular.module('pinyougou', [ 'pagination' ]);
+
+	//定义controller
+	app.controller("brandController", function($scope, $http) {
+		
+		//重新加载列表数据
+		$scope.reloadList=function(){
+			//切换页码
+			$scope.search($scope.paginationConf.currentPage,$scope.paginationConf.itemsPerPage);
+		}
+		
+		//分页控件配置
+		$scope.paginationConf={
+				currentPage: 1,
+				totalItems: 10,
+				itemsPerPage: 10,
+				perPageOptions: [10, 20, 30, 40, 50],
+				onChange: function(){
+					//重新加载
+					$scope.reloadList();
+				}
+		};
+		
+		//分页
+		$scope.findPage=function(pageNum,pageSize){
+			$http.get("../rest/brand/collections/page?pageNum="+pageNum+"&pageSize="+pageSize).success(function(response){
+				$scope.list=response.rows;
+				//更新总记录数
+				$scope.paginationConf.totalItems=response.total;
+			})
+		}
+		
+		//新增品牌
+		$scope.save=function(){
+			
+			var methodName = "create";
+			
+			//修改数据
+			if($scope.entity.id !=null){
+				methodName = "update";
+			}
+			
+			$http.post("../rest/brand/"+methodName,$scope.entity).success(function(response){
+				if(response.success){
+					//重新加载列表
+					$scope.reloadList();
+				}else{
+					alert(response.message);
+				}
+			})
+		}
+		
+		//根据Id获取品牌信息
+		$scope.findOne=function(id){
+			$http.get("../rest/brand/"+id).success(function(response){
+				$scope.entity=response;
+			})
+		}
+		
+		//定义选中的Id集合
+		$scope.selectIds=[];
+		
+		$scope.updateSelection=function($event,id){
+			//判断复选框是否被选中
+			if($event.target.checked){
+				$scope.selectIds.push(id);
+			}else{
+				var idx = $scope.selectIds.indexOf(id);
+				//从数组中删除
+				$scope.selectIds.splice(idx,1);
+			}
+		}
+		
+		//批量删除品牌
+		$scope.deleteBrands=function(){
+			$http.get("../rest/brand/delete?ids="+$scope.selectIds).success(function(response){
+				if(response.success){
+					//重新加载列表
+					$scope.reloadList();
+				}else{
+					alert(response.message);
+				}
+			})
+		}
+		
+		//定义搜索对象
+		$scope.searchEntity={};
+		
+		//条件查询
+		$scope.search=function(pageNum,pageSize){
+			$http.post("../rest/brand/search?pageNum="+pageNum+"&pageSize="+pageSize,$scope.searchEntity).success(function(response){
+				//列表
+				$scope.list=response.rows;
+				//总记录数
+				$scope.paginationConf.totalItems=response.total;
+			})
+		}
+		
+	});
+</script>
 
 </head>
-<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="brandController" ng-init="findAll()">
+<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="brandController" >
 	<!-- .box-body -->
 	<div class="box-header with-border">
 		<h3 class="box-title">品牌管理</h3>
@@ -51,23 +141,18 @@
 			<div class="pull-left">
 				<div class="form-group form-inline">
 					<div class="btn-group">
-						<button type="button" class="btn btn-default" title="新建"
-							data-toggle="modal" data-target="#editModal">
-							<i class="fa fa-file-o"></i> 新建
-						</button>
-						<button type="button" class="btn btn-default" title="删除">
-							<i class="fa fa-trash-o"></i> 删除
-						</button>
-						<button type="button" class="btn btn-default" title="刷新"
-							onclick="window.location.reload();">
-							<i class="fa fa-refresh"></i> 刷新
-						</button>
+						<button type="button" class="btn btn-default" title="新建" data-toggle="modal" data-target="#editModal" ng-click="entity={}"><i class="fa fa-file-o"></i> 新建 </button>
+						<button type="button" class="btn btn-default" title="删除" ng-click="deleteBrands()"><i class="fa fa-trash-o"></i> 删除</button>
+						<button type="button" class="btn btn-default" title="刷新" onclick="window.location.reload();"><i class="fa fa-refresh"></i> 刷新</button>
 					</div>
 				</div>
 			</div>
 			<div class="box-tools pull-right">
-				<div class="has-feedback"></div>
-			</div>
+                <div class="has-feedback">
+					品牌名称:<input ng-model="searchEntity.name"> 品牌首字母:<input ng-model="searchEntity.firstChar">  
+					<button  class="btn btn-default" ng-click="reloadList()">查询</button>                               
+                  </div>
+             </div>
 			<!--工具栏/-->
 
 			<!--数据列表-->
@@ -75,8 +160,7 @@
 				class="table table-bordered table-striped table-hover dataTable">
 				<thead>
 					<tr>
-						<th class="" style="padding-right: 0px"><input id="selall"
-							type="checkbox" class="icheckbox_square-blue"></th>
+						<th class="" style="padding-right: 0px"><input id="selall" type="checkbox" class="icheckbox_square-blue"></th>
 						<th class="sorting_asc">品牌ID</th>
 						<th class="sorting">品牌名称</th>
 						<th class="sorting">品牌首字母</th>
@@ -85,24 +169,23 @@
 				</thead>
 				<tbody>
 					<tr ng-repeat="entity in list">
-						<td><input type="checkbox"></td>
+						<td><input type="checkbox" ng-click="updateSelection($event,entity.id)"></td>
 						<td>{{entity.id}}</td>
 						<td>{{entity.name}}</td>
 						<td>{{entity.firstChar}}</td>
 						<td class="text-center">
-							<button type="button" class="btn bg-olive btn-xs"
-								data-toggle="modal" data-target="#editModal">修改</button>
+							<button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal"  ng-click="findOne(entity.id)">修改</button>
 						</td>
 					</tr>
 				</tbody>
 			</table>
 			<!--数据列表/-->
 
+     	<!-- 分页 -->
+		<tm-pagination conf="paginationConf"></tm-pagination>
 
 		</div>
 		<!-- 数据表格 /-->
-
-
 
 
 	</div>
@@ -122,20 +205,18 @@
 					<table class="table table-bordered table-striped" width="800px">
 						<tr>
 							<td>品牌名称</td>
-							<td><input class="form-control" placeholder="品牌名称">
+							<td><input class="form-control" placeholder="品牌名称" ng-model="entity.name">
 							</td>
 						</tr>
 						<tr>
 							<td>首字母</td>
-							<td><input class="form-control" placeholder="首字母"></td>
+							<td><input class="form-control" placeholder="首字母" ng-model="entity.firstChar"></td>
 						</tr>
 					</table>
 				</div>
 				<div class="modal-footer">
-					<button class="btn btn-success" data-dismiss="modal"
-						aria-hidden="true">保存</button>
-					<button class="btn btn-default" data-dismiss="modal"
-						aria-hidden="true">关闭</button>
+					<button class="btn btn-success" data-dismiss="modal" aria-hidden="true" ng-click="save()">保存</button>
+					<button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
 				</div>
 			</div>
 		</div>
