将js抽取，封装

--- a/pinyougou-parent/pingyougou-manager-web/src/main/webapp/admin/brand.html
+++ b/pinyougou-parent/pingyougou-manager-web/src/main/webapp/admin/brand.html
@@ -17,114 +17,15 @@
 
 <script type="text/javascript" src="../plugins/angularjs/angular.min.js"></script>
 
+	<script type="text/javascript" src="../js/base_pagination.js"></script>
+	<script type="text/javascript" src="../js/service/brandService.js"></script>
+	<script type="text/javascript" src="../js/controller/baseController.js"></script>
+	<script type="text/javascript" src="../js/controller/brandController.js"></script>
+
 <!-- 分页组件开始 -->
 <script src="../plugins/angularjs/pagination.js"></script>
 <link rel="stylesheet" href="../plugins/angularjs/pagination.css">
 <!-- 分页组件结束 -->
-
-<script type="text/javascript">
-	//定义模块
-	var app = angular.module('pinyougou', [ 'pagination' ]);
-
-	//定义controller
-	app.controller("brandController", function($scope, $http) {
-		
-		//重新加载列表数据
-		$scope.reloadList=function(){
-			//切换页码
-			$scope.search($scope.paginationConf.currentPage,$scope.paginationConf.itemsPerPage);
-		}
-		
-		//分页控件配置
-		$scope.paginationConf={
-				currentPage: 1,
-				totalItems: 10,
-				itemsPerPage: 10,
-				perPageOptions: [10, 20, 30, 40, 50],
-				onChange: function(){
-					//重新加载
-					$scope.reloadList();
-				}
-		};
-		
-		//分页
-		$scope.findPage=function(pageNum,pageSize){
-			$http.get("../rest/brand/collections/page?pageNum="+pageNum+"&pageSize="+pageSize).success(function(response){
-				$scope.list=response.rows;
-				//更新总记录数
-				$scope.paginationConf.totalItems=response.total;
-			})
-		}
-		
-		//新增品牌
-		$scope.save=function(){
-			
-			var methodName = "create";
-			
-			//修改数据
-			if($scope.entity.id !=null){
-				methodName = "update";
-			}
-			
-			$http.post("../rest/brand/"+methodName,$scope.entity).success(function(response){
-				if(response.success){
-					//重新加载列表
-					$scope.reloadList();
-				}else{
-					alert(response.message);
-				}
-			})
-		}
-		
-		//根据Id获取品牌信息
-		$scope.findOne=function(id){
-			$http.get("../rest/brand/"+id).success(function(response){
-				$scope.entity=response;
-			})
-		}
-		
-		//定义选中的Id集合
-		$scope.selectIds=[];
-		
-		$scope.updateSelection=function($event,id){
-			//判断复选框是否被选中
-			if($event.target.checked){
-				$scope.selectIds.push(id);
-			}else{
-				var idx = $scope.selectIds.indexOf(id);
-				//从数组中删除
-				$scope.selectIds.splice(idx,1);
-			}
-		}
-		
-		//批量删除品牌
-		$scope.deleteBrands=function(){
-			$http.get("../rest/brand/delete?ids="+$scope.selectIds).success(function(response){
-				if(response.success){
-					//重新加载列表
-					$scope.reloadList();
-				}else{
-					alert(response.message);
-				}
-			})
-		}
-		
-		//定义搜索对象
-		$scope.searchEntity={};
-		
-		//条件查询
-		$scope.search=function(pageNum,pageSize){
-			$http.post("../rest/brand/search?pageNum="+pageNum+"&pageSize="+pageSize,$scope.searchEntity).success(function(response){
-				//列表
-				$scope.list=response.rows;
-				//总记录数
-				$scope.paginationConf.totalItems=response.total;
-			})
-		}
-		
-	});
-</script>
-
 </head>
 <body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="brandController" >
 	<!-- .box-body -->
